--- a/bootsrap/index.html
+++ b/bootsrap/index.html
@@ -13,16 +13,15 @@
     <title>Face Recognition</title>
     <style>
         body {
-            
+
             background-color: #FF3CAC;
-            background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
+            background-image: linear-gradient(225deg, #1c1125 0%, #633d88 50%, #9d53a1 100%);
 
 
         }
 
         .card {
-            background: linear-gradient(178.41deg, #5C1B8F 16.05%, #817988 70.26%, #FFFFFF 150.18%, rgba(183, 138, 219, 0) 177.75%);
-            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+            background: linear-gradient(178.41deg, #7C0D9B 16.05%, #817988 70.26%, #FFF 150.18%, rgba(183, 138, 219, 0) 177.75%);
             margin: 149px;
             border-radius: 19px;
             height: 442px;
