--- a/bootsrap/index.html
+++ b/bootsrap/index.html
@@ -15,13 +15,13 @@
         body {
 
             background-color: #FF3CAC;
-            background-image: linear-gradient(225deg, #1c1125 0%, #633d88 50%, #9d53a1 100%);
-
-
+            background-image: linear-gradient(225deg, #fc1414 0%, #faef4ae3 50%, #0135ff 100%);
         }
 
+
+
         .card {
-            background: linear-gradient(178.41deg, #7C0D9B 16.05%, #817988 70.26%, #FFF 150.18%, rgba(183, 138, 219, 0) 177.75%);
+            background: linear-gradient(178.41deg, #9D1616 16.05%, #3e2d8f 70.26%, #FFF 150.18%, rgba(183, 138, 219, 0) 177.75%);
             margin: 149px;
             border-radius: 19px;
             height: 442px;
@@ -35,7 +35,9 @@
             width: 119px;
             height: 43px;
             padding: 7px;
+            border-color: #460745;
         }
+
 
         .input-group {
 
