--- a/bootsrap/index.html
+++ b/bootsrap/index.html
@@ -51,13 +51,14 @@
             width: 86%;
             padding-left: 51px;
             padding-top: 46px;
+        }
     </style>
 </head>
 
 <body>
 
     <center>
-        <div class="card" style="width 25rem;">
+        <div class="card" style="width:25rem;">
             <img src="https://ichef.bbci.co.uk/news/976/cpsprodpb/11DDE/production/_110528137_gettyimages-1139859279.jpg"
                 class="card-img-top" alt="...">
             <div class="card-body">
