--- a/bootsrap/index.html
+++ b/bootsrap/index.html
@@ -14,14 +14,17 @@
     <style>
         body {
 
-            background-color: #FF3CAC;
-            background-image: linear-gradient(225deg, #fc1414 0%, #faef4ae3 50%, #0135ff 100%);
+            background-color: #0C1339;
+            background-image: linear-gradient(43deg, #490557 0%, #C850C0 46%, #0D427C 100%);
+
         }
 
 
 
         .card {
-            background: linear-gradient(178.41deg, #9D1616 16.05%, #3e2d8f 70.26%, #FFF 150.18%, rgba(183, 138, 219, 0) 177.75%);
+            background: linear-gradient(178.41deg, #5C1B8F 16.05%, #817988 70.26%, #FFFFFF 150.18%, rgba(183, 138, 219, 0) 177.75%);
+            filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+            border-radius: 14px;
             margin: 149px;
             border-radius: 19px;
             height: 442px;
@@ -51,6 +54,7 @@
             width: 86%;
             padding-left: 51px;
             padding-top: 46px;
+        }
     </style>
 </head>
 
